replace Java 21 method